--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,7 +41,7 @@ body {
 
 body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: #f5ecce;
+  //background-color: #ffffff;
 }
 
 html,
