--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
+<div class="loader-container">
+  <mat-progress-bar *ngIf="loading" mode="indeterminate" color="primary"></mat-progress-bar>
+</div>
 <router-outlet></router-outlet>
 
