--- a/src/app/mci/mci/mci.component.html
+++ b/src/app/mci/mci/mci.component.html
@@ -1,3 +1,35 @@
-<p>mci works!</p>
-Bienvenidisimo
+<div class="mat-card-container">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>
+        <b>Información</b>
+      </mat-card-title>
+    </mat-card-header>
 
+    Misión Carismática Internacional es una iglesia Cristiana fundamentada en principios y valores establecidos en la
+    palabra de Dios. Estamos en Bucaramanga desde el 20 de Julio de 1989 llevando el mensaje de Jesús por toda la
+    región.
+    <br>
+    <br>
+    <div class="img-principal-container">
+      <img src="../../../assets/images/mci-hero2.jpg" alt="" class="img-principal">
+    </div>
+
+  </mat-card>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>
+        MCI -
+        <b>Convención de hombres (Bogotá)</b>
+      </mat-card-title>
+    </mat-card-header>
+    Del próximo 19 a 22 de Octubre se estará realizando la próxima convención de hombres en nuestra sede principal
+    Bogotá, Colombia. Aún tienes plazo de inscribirte y asistir a éste gran tiempo.
+    <br>
+    <br>
+    <div class="img-principal-container">
+      <img src="../../../assets/images/banner_visionarios.png" alt="" class="img-principal">
+    </div>
+  </mat-card>
+
+</div>
