--- a/src/styles.scss
+++ b/src/styles.scss
@@ -365,3 +365,9 @@ mat-paginator,
 .justify-content-center {
   justify-content: center;
 }
+.mat-progress-bar-buffer{
+  background-color: #FFFFFF !important;
+}
+.mat-progress-bar-element{
+  background-color: #FFFFFF;
+}
