--- a/src/app/app-layout/app-layout.component.html
+++ b/src/app/app-layout/app-layout.component.html
@@ -22,23 +22,27 @@
       </mat-tree-node>
       <!-- This is the tree node template for expandable nodes -->
       <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding>
+
+        <button mat-button matTreeNodeToggle [attr.aria-label]="'Toggle ' + node.name" class="tree-node-father">
+          {{node.name}}
+        </button>
         <button mat-icon-button matTreeNodeToggle
                 [attr.aria-label]="'Toggle ' + node.name">
           <mat-icon class="mat-icon-rtl-mirror">
-            {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+            {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_left'}}
           </mat-icon>
         </button>
-        {{node.name}}
       </mat-tree-node>
     </mat-tree>
   </mat-drawer>
 
   <div class="example-sidenav-content">
     <mat-toolbar color="primary">
-      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="drawer.toggle()">
+      <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"
+              (click)="drawer.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
-<!--      <span>Misión Carismática Internacional</span>-->
+      <!--      <span>Misión Carismática Internacional</span>-->
       <span class="example-spacer"></span>
       <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
         <mat-icon>favorite</mat-icon>
