--- a/src/app/mci/signup/signup.component.html
+++ b/src/app/mci/signup/signup.component.html
@@ -16,76 +16,39 @@
             </a>
           </div>
 
-          <mat-tab-group>
-            <mat-tab label="Miembro">
-              <br>
-              <form>
-                <div class="inputs">
-                  <mat-form-field class="example-full-width" appearance="fill">
-                    <mat-label>Número de documento</mat-label>
-                    <input matInput placeholder="Ex. user1234">
-                  </mat-form-field>
+          <form [formGroup]="form">
+            <div class="inputs">
+              <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>Número de documento</mat-label>
+                <input matInput formControlName="document">
+              </mat-form-field>
 
-                  <mat-form-field class="example-full-width" appearance="fill">
-                    <mat-label>Contraseña</mat-label>
-                    <input matInput>
-                  </mat-form-field>
+              <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>Email</mat-label>
+                <input matInput formControlName="email">
+              </mat-form-field>
 
-                  <mat-form-field appearance="fill">
-                    <mat-label>Rol</mat-label>
-                    <mat-select>
-                      <mat-option *ngFor="let food of foods" [value]="food.value">
-                        {{food.viewValue}}
-                      </mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </div>
-                <div class="buttons">
-                  <button
-                    mat-raised-button
-                    color="primary"
-                    class="mr-10px"
-                  >
-                    Registrar
-                  </button>
-                </div>
-              </form>
-            </mat-tab>
-            <mat-tab label="Líder">
-              <br>
-              <form>
-                <div class="inputs">
-                  <mat-form-field class="example-full-width" appearance="fill">
-                    <mat-label>Número de documento</mat-label>
-                    <input matInput placeholder="Ex. user1234">
-                  </mat-form-field>
+              <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>Usuario</mat-label>
+                <input matInput formControlName="username">
+              </mat-form-field>
 
-                  <mat-form-field class="example-full-width" appearance="fill">
-                    <mat-label>Contraseña</mat-label>
-                    <input matInput type="password">
-                  </mat-form-field>
-
-                  <mat-form-field appearance="fill">
-                    <mat-label>Rol</mat-label>
-                    <mat-select>
-                      <mat-option *ngFor="let food of foods" [value]="food.value">
-                        {{food.viewValue}}
-                      </mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </div>
-                <div class="buttons">
-                  <button
-                    mat-raised-button
-                    color="primary"
-                    class="mr-10px"
-                  >
-                    Registrar
-                  </button>
-                </div>
-              </form>
-            </mat-tab>
-          </mat-tab-group>
+              <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>Contraseña</mat-label>
+                <input matInput formControlName="password" type="password">
+              </mat-form-field>
+            </div>
+            <div class="buttons">
+              <button
+                mat-raised-button
+                color="primary"
+                class="mr-10px"
+                (click)="signUp()"
+              >
+                Registrar
+              </button>
+            </div>
+          </form>
 
         </div>
       </mat-card>
