--- a/src/app/mci/password-reminder/password-reminder.component.html
+++ b/src/app/mci/password-reminder/password-reminder.component.html
@@ -14,7 +14,7 @@
               <!--      <span class="uis-layout-branding-name">UIS</span>-->
             </a>
           </div>
-          <form [formGroup]="form" (ngSubmit)="login()">
+          <form [formGroup]="form" (ngSubmit)="remindPassword()">
             <div class="inputs">
               <mat-form-field class="example-full-width" appearance="fill">
                 <mat-label>Nombre de Usuario</mat-label>
@@ -27,24 +27,8 @@
                   El username no puede tener más de 10 caracteres
                 </mat-error>
               </mat-form-field>
-
-              <mat-form-field class="example-full-width" appearance="fill">
-                <mat-label>Contraseña</mat-label>
-                <input matInput type="password" formControlName="password">
-              </mat-form-field>
-
-              <mat-form-field appearance="fill">
-                <mat-label>Rol</mat-label>
-                <mat-select formControlName="idRol">
-                  <mat-option *ngFor="let food of foods" [value]="food.id">
-                    {{food.rolName}}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-              <div (click)="openPasswordReminder()">
-                <a class="mat-button">¿Olvidaste tú contraseña?</a>
-              </div>
             </div>
+            <br>
             <div class="buttons">
               <button
                 mat-raised-button
@@ -52,7 +36,7 @@
                 class="mr-10px"
                 type="submit"
               >
-                Iniciar sesión
+                Restablecer contraseña
               </button>
             </div>
           </form>
