--- a/src/app/mci/leader/list-disciples/list-disciples.component.html
+++ b/src/app/mci/leader/list-disciples/list-disciples.component.html
@@ -11,14 +11,26 @@
 
     <div class="criteria-query">
       <p class="mb-0"><b>Discípulos</b></p>
-      <a
-        (click)="addMode()"
-        mat-mini-fab
-        color="primary"
-        title="Agregar nuevo registro"
-      >
-        <mat-icon>add</mat-icon>
-      </a>
+      <div class="leader-buttons">
+        <a
+          (click)="fillData()"
+          mat-mini-fab
+          color="primary"
+          class="button-leader"
+          title="Agregar nuevo registro"
+        >
+          <mat-icon>text_snippet</mat-icon>
+        </a>
+        <a
+          (click)="addMode()"
+          mat-mini-fab
+          color="primary"
+          class="button-leader"
+          title="Agregar nuevo registro"
+        >
+          <mat-icon>add</mat-icon>
+        </a>
+      </div>
     </div>
 
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
@@ -53,8 +65,13 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef class="text-align-center"> Acciones</th>
         <td mat-cell *matCellDef="let element" class="text-align-center">
-          <button mat-icon-button (click)="editMode(element)"><mat-icon>edit</mat-icon></button>
-          <button mat-icon-button (click)="viewMode(element)"><mat-icon>visibility</mat-icon></button></td>
+          <button mat-icon-button (click)="editMode(element)">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-icon-button (click)="viewMode(element)">
+            <mat-icon>visibility</mat-icon>
+          </button>
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
